[feat] 创建容器支持 privileged 特权模式选项
